--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,8 @@ services:
   - docker
 
 install:
-  - pip install ansible=2.9.6 molecule==2.22 docker-py
-
+  - pip install ansible==2.9.6 molecule==2.22 docker-py
+  
 script:
   - molecule test
 
